# UFP_Alojamentos

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  main.c  project.c  project.h
data/: aloj.csv  edfs.psv  estudio.psv  eventos.psv  historico.csv  historico.psv  hospedes.csv  regras_preco.csv
data/agendas/masters/: 1234_master.psv  123_master.psv  5678_master.psv  sample_master.psv
data/agendas/outras/: 1_outra.psv  2_outra.psv
data/agendas/outras_handlers/: 1234_handler.psv  123_handler.psv
data/reports/: 202012251_edfBill_report.txt  202012251_edfOcu_report.txt  202012251_estBill_report.txt  202012251_estOcu_report.txt  202012252_edfOcu_report.txt  202012252_estOcu_report.txt  202012253_estOcu_report.txt  20201225_allBill_report.txt  20201225_allOcu_report.txt
scripts/: data_handler.c  data_handler.h  data_reader.c  data_reader.h  global_defines.c  global_defines.h  project.c  project.h
scripts/API/: agendas.c  agendas.h  edificios.c  edificios.h  estudios.c  estudios.h  eventos.c  eventos.h  guests_list.c  guests_list.h  historicoReservas.c  historicoReservas.h
scripts/billing/: billing.c  billing.h
scripts/data_handler/: data_reader.c  data_reader.h  data_writer.c  data_writer.h  report_generator.c  report_generator.h
scripts/general/: commandLineHandler.c  commandLineHandler.h  project.c  project.h  structs.h  utils.c  utils.h
